syntax = "proto3";

option csharp_namespace = "KBA.Framework.Grpc.Orders";

package orders;

// Service de gestion des commandes
service OrderService {
  // Crée une nouvelle commande
  rpc CreateOrder (CreateOrderRequest) returns (CreateOrderResponse);
  
  // Récupère une commande par ID
  rpc GetOrder (GetOrderRequest) returns (GetOrderResponse);
  
  // Liste toutes les commandes d'un utilisateur
  rpc GetUserOrders (GetUserOrdersRequest) returns (GetUserOrdersResponse);
  
  // Valide une commande (vérifie stock, permissions, etc.)
  rpc ValidateOrder (ValidateOrderRequest) returns (ValidateOrderResponse);
}

// Messages pour CreateOrder
message CreateOrderRequest {
  string user_id = 1;
  string tenant_id = 2;
  repeated OrderItem items = 3;
  string shipping_address = 4;
  string correlation_id = 5;
}

message OrderItem {
  string product_id = 1;
  int32 quantity = 2;
  double unit_price = 3;
}

message CreateOrderResponse {
  bool success = 1;
  string message = 2;
  Order order = 3;
}

// Messages pour GetOrder
message GetOrderRequest {
  string order_id = 1;
  string correlation_id = 2;
}

message GetOrderResponse {
  bool success = 1;
  Order order = 2;
}

// Messages pour GetUserOrders
message GetUserOrdersRequest {
  string user_id = 1;
  string tenant_id = 2;
  int32 page_number = 3;
  int32 page_size = 4;
  string correlation_id = 5;
}

message GetUserOrdersResponse {
  repeated Order orders = 1;
  int32 total_count = 2;
}

// Messages pour ValidateOrder
message ValidateOrderRequest {
  string user_id = 1;
  repeated OrderItem items = 2;
  string correlation_id = 3;
}

message ValidateOrderResponse {
  bool is_valid = 1;
  repeated string errors = 2;
  ValidationDetails details = 3;
}

message ValidationDetails {
  bool has_permission = 1;
  bool products_available = 2;
  bool user_exists = 3;
  repeated string unavailable_products = 4;
}

// Entité Order
message Order {
  string id = 1;
  string user_id = 2;
  string tenant_id = 3;
  repeated OrderItem items = 4;
  double total_amount = 5;
  string status = 6;
  string shipping_address = 7;
  string created_at = 8;
  string updated_at = 9;
}
